recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return 0
           ^Spiral:3: warning: enclosing method spiral has result type Unit: return value discarded
    return 0
    ^Spiral:8: error: reassignment to val
  length=length+increment
        ^Spiral:9: error: reassignment to val
  steps=steps-1
       ^