recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  if (steps==0){
    return 0
  }
  else{
  avance(length);
  gauche(angle);
  length=length+increment
  steps=steps-1
  spiral(steps,angle,length,increment);
  
  
  }
}